--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Setting preferred color scheme to dark */
+:root {
+  color-scheme: dark;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
